      calcforce 2 ==> calcforce comps
    Example input files have been updated to reflect this change.  NOTE:
    the code is backward-compliant; i.e., old input files WILL still work.
  * Added new READ options "PARM" and "MOL PDB", see documentation for more
    information.  These options allow users to use unparameterized PDB files
    together with a parameter database.
  * Updated the documentation
  * Now include support for chain IDs and other optional fields in PQR/PDB
    files
  * Added support for parsing PDB files
  * Fixed omission of srfm in sections of  documentation (thanks to Sameer 
    Varma)
  * Made autoconf/automake configure setup more robust on Solaris 8 platforms
    (thanks to Ben Carrington)
  * Renamed:
      amber2charmm -> amber2charmm.sh
      pdb2pqr -> pdb2pqr.awk
      qcd2pqr -> qcd2pqr.awk

  CHANGES THAT AFFECT DEVELOPERS:
  * Altered --with-blas syntax in configure scripts and removed --disable-blas
  * Documented high-level frontend routines
  * Cool new class and header-file dependency graphs courtesy of Doxygen and
    Graphviz
  * Added substantial mypde.c-based functionality to Vfetk
  * Moved chgm from PBEparm to MGparm
  * Minor changes to Vfetk: removed genIcos and added genCube
  * FEM solution of RPBE working again (see test/reg-fem) and is probably
    more up-to-date than test/fem
  * Updated API documentation
  * Changed many NOsh, FEMparm, MGparm variables to enums
  * Changes to Valist and Vatom classes
  * Fixed minor bugs in documentation formatting
  * Made Vopot more robust
  * Created Vparam class for parameter file parsing
  * Added vparam* parameter database flat files to tools/conversion/param
 
#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.6       01-17-03
#############################################################################
 
  * Changed license to GPL 
  * Made a few routines compliant with ANSI X3.159-1989 by 