@@ -498,6 +498,10 @@
  *   Perform arithmetic operations on OpenDX-format grids and scalar
  *   quantities.  Similar to UHBD's <code>gridcalc</code> utility; run code
  *   with no arguments for instructions.
+ *   <li> apbs/tools/mesh/norm <br>
+ *   Given an OpenDX grid-based dataset, this program produces various norms,
+ *   semi-norms, and <a
+ *   href="http://s9000.furman.edu/~ejorgens/cheers/archives/normisms.html">Norm-isms</a>
  *   <li> apbs/tools/mesh/uhbd_asc2bin <br> 
  *   Converts UHBD-format grid files from ASCII to binary.  Contributed by Dave
  *   Sept.
