@@ -24,6 +24,12 @@
 /* have the MPI library */
 #undef HAVE_MPI_H
 
+/* have the rand() function */
+#undef HAVE_RAND_FUNC
+
+/* have the srand() function */
+#undef HAVE_SRAND_FUNC
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
@@ -44,6 +50,9 @@
 
 /* Define to 1 if you have the <sys/types.h> header file. */
 #undef HAVE_SYS_TYPES_H
+
+/* have the time() function */
+#undef HAVE_TIME_FUNC
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
